# nix-config

./: .envrc  .sops.yaml  CLAUDE.md  README.md  flake.nix  hosts.nix  paths.nix  test-impermanence.sh  test.sh
backgrounds/: lucas-benjamin-unsplash.avif  tokyo-night-ai
core/: wayland-packages.nix  wayland-system.nix  wayland.nix
core/modules/impermanence/immutability-rs/: .gitignore  Cargo.toml
core/modules/impermanence/immutability-rs/src/: btrfs.rs  fileops.rs  main.rs  test_utils.rs
core/modules/impermanence/immutability-rs/tests/: integration_tests.rs
desktops/: cosmic.nix  gnome.nix  hm-cosmic.nix  hm-hyprland.nix  hm-mangowc.nix  hm-niri.nix  hm-river.nix  hm-sway.nix  hyprland.nix  kde.nix  mangowc.nix  niri.nix  river.nix  sway.nix  xfce.nix
disk-config/: media-disk-config.nix
hardware/: desktop-hardware-configuration.nix  thinkpad-hardware-configuration.nix
home/: default.nix  home.nix
hosts/: desktop.nix  macbook.nix  media.nix  nixos-wsl.nix  thinkpad.nix
lib/: custom-options.nix  darwin-base.nix  darwin-default.nix  home-manager.nix  mk-darwin-system.nix  mk-desktop-specialisations.nix  mk-system.nix  module-utils.nix  root-persistence.nix  system-base.nix
machines/: hm-desktop.nix  hm-macbook.nix
microvms/: README.md  agent-vm.nix  dev-vm.nix
modules/: agent-tools.nix  alacritty.nix  awww.nix  backup.nix  brave.nix  cage.nix  calibre.nix  claude-code.nix  codex.nix  db-tools.nix  developer.nix  direnv.nix  display-manager.nix  distrobox.nix  docker.nix  dunst.nix  gaming.nix  ghostty.nix  git.nix  hm-alacritty.nix  hm-brave.nix  (+48 more)
(+251 files in other folders)
