[package]
name = "immutability"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
serial_test = "3.0"
mockall = "0.12"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"